# poetry-watsin

./: README.md  pyproject.toml
poetry_watsin/: plugin.py
watsin/: plugin.py
